Fix first of type li not showing up in full size

--- a/css/style.css
+++ b/css/style.css
@@ -264,6 +264,7 @@ footer div.container a:hover {
 
 @media (min-width: 1200px) {
     nav ul li:first-of-type {
+        display: inline;
         padding-right: 20em;
     }
 
